--- a/udy/todolist-v1/views/list.ejs
+++ b/udy/todolist-v1/views/list.ejs
@@ -5,6 +5,12 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>It's a <%=day_today%></h1>
+
+<% if (day_today="Saturday" || day_today="Sunday"){ %>
+        <h1 style="color: blue;">It's <%=day_today%> </h1>
+<% } else { %>
+        <h1 style="color: green;">It's <%=day_today%> </h1>
+<% } %>
+
 </body>
 </html>
